# gt-lt-bot

./: README.md  keep_alive.py  levels.json  main.py  owners.txt  pyproject.toml  slash_util.py  voice.db
cogs/: calculator.py  error.py  event.py  fun.py  level.py  levels.py  main.py  mod.py  music.py  slash_main.py  tests.py  ticket.py  voice.py
datas/: levels.json  verify.json  voice.db
templates/: base.html  cmds.html  home.html  index.html  keep_alive.html  list.html  privacy-policy.html  support.html
tests/: cog.py  embedpage.py  tickettool.py  tickettool2.py  verify.py
