[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-pretty-help = "^1.3.3"
discord-py-slash-command = "^3.0.3"
replit = "^3.2.4"
discord-components = "^2.1.2"
youtube_dl = "^2021.12.17"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
