[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["liyoujun600 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord-pretty-help = "^1.3.3"
discord-py-slash-command = "^3.0.3"
PyNaCl = "^1.5.0"
youtube_dl = "^2021.12.17"
discord-components = "^2.1.2"
Flask = "^2.0.2"
typing-extensions = "^4.0.1"
discord = "^1.7.3"
wavelink = "^0.9.10"
easy-pil = "^0.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
