[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["liyoujun600 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
discord-pretty-help = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
